# flexiv_tdk

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cmake.yml  pages.yml
.github/workflows/shared_steps/: action.yml
cmake/: FlexivInstallLibrary.cmake  flexiv_omni_teleop-config.cmake.in  flexiv_tdk-config.cmake.in
doc/: Doxyfile.in  Doxygen.in
docs/: README.md  index.md
docs/api/: index.md
docs/doxygen/: Doxyfile.in
docs/qa/: index.md
docs/user-manual/: examples.md  overview.md  quick-start-cpp.md  quick-start-python.md  real-time-kernel.md  system-setup.md  time-sync.md  troubleshooting.md
example/: CMakeLists.txt  basic_cart_teleop.cpp  basic_free_space_motion_teleop.cpp  basic_teleop.cpp  basics1_cart_teleop.cpp  basics1_cartesian_teleop.cpp  cartesian_teleop_under_lan.cpp  gripper_ctrl_lan.cpp  high_transparency_teleop.cpp  joint_teleop_over_wan.cpp  joint_teleop_under_lan.cpp  test_cart_teleop_under_lan.cpp  test_joint_teleop_over_wan.cpp  test_joint_teleop_under_lan.cpp  transparent_cartesian_teleop_lan.cpp  transparent_cartesian_teleop_wan.cpp
example_py/: cartesian_teleop_under_lan.py  joint_teleop_over_wan.py  joint_teleop_under_lan.py  transparent_cartesian_teleop_lan.py  transparent_cartesian_teleop_wan.py
include/flexiv/omni/teleop/: Robot2RobotTeleop.hpp  Scheduler.hpp  TeleopDefs.hpp  Teleoperation.hpp  robot_robot_teleop.hpp  teleop_defs.hpp
include/flexiv/tdk/: cartesian_teleop_lan.hpp  data.hpp  device_teleop_lan.hpp  gripper_ctrl_lan.hpp  joint_teleop_lan.hpp  joint_teleop_wan.hpp  robot_robot_teleop.hpp  transparent_cartesian_teleop_lan.hpp  transparent_cartesian_teleop_wan.hpp
include/flexiv/teleop/: robot_robot_teleop.hpp  scheduler.hpp  teleop_defs.hpp
lib/: dummy.cpp  libflexiv_tdk.aarch64-linux-gnu.a.ros2-jazzy.sha256  libflexiv_tdk.aarch64-linux-gnu.a.sha256  libflexiv_tdk.aarch64-linux-gnu.ros2-jazzy.a.sha256  libflexiv_tdk.x86_64-linux-gnu.a.ros2-jazzy.sha256  libflexiv_tdk.x86_64-linux-gnu.a.sha256  libflexiv_tdk.x86_64-linux-gnu.ros2-jazzy.a.sha256
license/: generator
license_generator/: apply_for_license.md  generate_feature_id.sh  generator  generator_20  generator_22
omni_license_generator/: Omni_license.md  generator
